--- a/mijn-amsterdam/src/layouts/Layout.astro
+++ b/mijn-amsterdam/src/layouts/Layout.astro
@@ -23,10 +23,13 @@ const { title } = Astro.props;
 				try {
 					embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
 
+					embeddedservice_bootstrap.settings.devMode = true;
+					console.dir(embeddedservice_bootstrap.settings);
+
 					embeddedservice_bootstrap.init(
 						'00D7a0000005DOS',
 						'GemeenteAmsterdamMessagingWeb',
-						'https://omnichanneliv--dev.sandbox.my.site.com/ESWGemeenteAmsterdamMessage1',
+						'https://mijn-amsterdam.netlify.app',
 						{
 							scrt2URL: 'https://omnichanneliv--dev.sandbox.my.salesforce-scrt.com'
 						}
