--- a/mijn-amsterdam/src/layouts/Layout.astro
+++ b/mijn-amsterdam/src/layouts/Layout.astro
@@ -12,7 +12,7 @@ const { title } = Astro.props;
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.ico" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
@@ -45,9 +45,9 @@ const { title } = Astro.props;
 </html>
 <style is:global>
 	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
+		--accent: 236, 0, 0;
+		--accent-light: 0, 70, 153;
+		--accent-dark: 0, 45, 90;
 		--accent-gradient: linear-gradient(
 			45deg,
 			rgb(var(--accent)),
