Add HomeHeroSection component with image to homepage
Introduced a new HomeHeroSection component featuring a hero image to the homepage. Also created a Container component to wrap the hero section for better layout control. Updated the homepage layout to include the new hero section, enhancing the visual appeal and structure.

--- a/mijn-amsterdam/src/pages/index.astro
+++ b/mijn-amsterdam/src/pages/index.astro
@@ -1,23 +1,34 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
+import HomeHeroSection from '../components/HomeHeroSection.astro';
+import Container  from '../components/core/Container.astro';
 ---
 
+
 <Layout title="Mijn Amsterdam | Welkom">
+	<Container>
+		<HomeHeroSection />
+	</Container>
 	<main>
 
-		<h1>Mijn <span class="text-gradient">Amsterdam</span></h1>
+		<h1>Welkom <span class="text-gradient"> op Mijn Amsterdam</span></h1>
 		<p class="instructions">
 
+			Uw Amsterdamse zaken op 1 plek.
 
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
+
 		</p>
 
 	</main>
 </Layout>
 
 <style>
+
+</style>
+
+<style>
+
 	main {
 		margin: auto;
 		padding: 1rem;
