--- a/mijn-amsterdam/src/layouts/Layout.astro
+++ b/mijn-amsterdam/src/layouts/Layout.astro
@@ -38,6 +38,16 @@ const { title } = Astro.props;
 					console.error('Error loading Embedded Messaging: ', err);
 				}
 			};
+
+			window.addEventListener("onEmbeddedMessagingReady", e => {
+				//log event
+				console.log("onEmbeddedMessagingReady event triggered");
+				//embedded_svc.settings.externalStyles = ["https://omnichanneliv--dev--c.sandbox.vf.force.com/resource/1726748869000/customChatCSS"];
+				//Set invisible prechat field
+				embeddedservice_bootstrap.prechatAPI.setHiddenPrechatFields({
+					"Start_Location" : window.location.href
+				});
+			});
 		</script>
 		<script type='text/javascript' src='https://omnichanneliv--dev.sandbox.my.site.com/ESWGemeenteAmsterdamMessage1/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
 
