--- a/mijn-amsterdam/src/layouts/Layout.astro
+++ b/mijn-amsterdam/src/layouts/Layout.astro
@@ -21,17 +21,17 @@ const { title } = Astro.props;
 		<script type='text/javascript'>
 			function initEmbeddedMessaging() {
 				try {
-					embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
+					embeddedservice_bootstrap.settings.language = 'nl-NL'; // For example, enter 'en' or 'en-US'
 
-					embeddedservice_bootstrap.settings.devMode = true;
-					console.dir(embeddedservice_bootstrap.settings);
+					//Turns of the chat button
+					embeddedservice_bootstrap.settings.hideChatButtonOnLoad = true;
 
 					embeddedservice_bootstrap.init(
-						'00D7a0000005DOS',
+						'00D7a000000574Q',
 						'GemeenteAmsterdamMessagingWeb',
-						'https://omnichanneliv--dev.sandbox.my.site.com/ESWGemeenteAmsterdamMessage1',
+						'https://omnichanneliv--test.sandbox.my.site.com/ESWGemeenteAmsterdamMessage',
 						{
-							scrt2URL: 'https://omnichanneliv--dev.sandbox.my.salesforce-scrt.com'
+							scrt2URL: 'https://omnichanneliv--test.sandbox.my.salesforce-scrt.com'
 						}
 					);
 				} catch (err) {
@@ -39,17 +39,58 @@ const { title } = Astro.props;
 				}
 			};
 
+			function checkIfChatSessionIsCreated() {
+				const orgId = '00D7a000000574Q';
+				const storageItemSuffix = '_WEB_STORAGE';
+				const storageItem = localStorage.getItem(orgId + storageItemSuffix)
+
+				let hasSession = false;
+				if (storageItem) {
+					const storageObj = JSON.parse(storageItem);
+					if (Object.keys(storageObj).length > 0) {
+						hasSession = true;
+					}
+				}
+
+				return hasSession;
+			}
+
+			function showChatBasedOnTaxonomy() {
+				return true;
+			}
+
 			window.addEventListener("onEmbeddedMessagingReady", e => {
-				//log event
-				console.log("onEmbeddedMessagingReady event triggered");
-				//embedded_svc.settings.externalStyles = ["https://omnichanneliv--dev--c.sandbox.vf.force.com/resource/1726748869000/customChatCSS"];
-				//Set invisible prechat field
 				embeddedservice_bootstrap.prechatAPI.setHiddenPrechatFields({
-					"Start_Location" : window.location.href
+					"Start_Location" : window.location.href,
+					"Chat_Origin": "Website"
 				});
+
+				/**
+				 * Check if u want to turn on the chat button.
+				 */
+				if (checkIfChatSessionIsCreated() || showChatBasedOnTaxonomy()) {
+					// Shows the chat button
+					embeddedservice_bootstrap.utilAPI.showChatButton();
+				}
+
+				if (checkIfChatSessionIsCreated()) {
+					// Launches a chat and can be even used when the button is not visible
+					embeddedservice_bootstrap.utilAPI
+						.launchChat()
+						.then(function (success) {
+							// Add actions to run after the chat client launches successfully.
+						})
+						.catch(function (error) {
+							// Add actions to run after the chat client launch fails.
+						})
+						.finally(function () {
+							// Add actions to run whether the chat client launches
+							// successfully or not.
+						});
+				}
 			});
 		</script>
-		<script type='text/javascript' src='https://omnichanneliv--dev.sandbox.my.site.com/ESWGemeenteAmsterdamMessage1/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+		<script type='text/javascript' src='https://omnichanneliv--test.sandbox.my.site.com/ESWGemeenteAmsterdamMessage/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
 
 	</body>
 </html>
