--- a/mijn-amsterdam/src/layouts/Layout.astro
+++ b/mijn-amsterdam/src/layouts/Layout.astro
@@ -24,7 +24,7 @@ const { title } = Astro.props;
 					embeddedservice_bootstrap.settings.language = 'nl-NL'; // For example, enter 'en' or 'en-US'
 
 					//Turns of the chat button
-					embeddedservice_bootstrap.settings.hideChatButtonOnLoad = true;
+					// embeddedservice_bootstrap.settings.hideChatButtonOnLoad = true;
 
 					embeddedservice_bootstrap.init(
 						'00D7a000000574Q',
@@ -68,10 +68,10 @@ const { title } = Astro.props;
 				/**
 				 * Check if u want to turn on the chat button.
 				 */
-				if (checkIfChatSessionIsCreated() || showChatBasedOnTaxonomy()) {
-					// Shows the chat button
-					embeddedservice_bootstrap.utilAPI.showChatButton();
-				}
+				// if (checkIfChatSessionIsCreated() || showChatBasedOnTaxonomy()) {
+				// 	// Shows the chat button
+				// 	embeddedservice_bootstrap.utilAPI.showChatButton();
+				// }
 
 				if (checkIfChatSessionIsCreated()) {
 					// Launches a chat and can be even used when the button is not visible
