--- a/mijn-amsterdam/src/layouts/Layout.astro
+++ b/mijn-amsterdam/src/layouts/Layout.astro
@@ -65,18 +65,22 @@ const { title } = Astro.props;
 					"Chat_Origin": "Website"
 				});
 
+				/**
+				 * Check if u want to turn on the chat button.
+				 */
+				if (checkIfChatSessionIsCreated() || showChatBasedOnTaxonomy()) {
+					// Shows the chat button
+					setTimeout(() => {
+						embeddedservice_bootstrap.utilAPI.showChatButton();
+					}, 1000);
+				}
+
 				if (checkIfChatSessionIsCreated()) {
 					// Launches a chat and can be even used when the button is not visible
 					embeddedservice_bootstrap.utilAPI
 						.launchChat()
 						.then(function (success) {
-							/**
-							 * Check if u want to turn on the chat button.
-							 */
-							if (checkIfChatSessionIsCreated() || showChatBasedOnTaxonomy()) {
-								// Shows the chat button
-								embeddedservice_bootstrap.utilAPI.showChatButton();
-							}
+
 						})
 						.catch(function (error) {
 							// Add actions to run after the chat client launch fails.
