Update Salesforce chat initialization to use dev environment
Replaced the org ID and URLs in the embeddedservice_bootstrap setup to point to the development environment instead of the previous testing configuration. This ensures that the chat functionality operates correctly in the dev environment setup.

--- a/mijn-amsterdam/src/layouts/Layout.astro
+++ b/mijn-amsterdam/src/layouts/Layout.astro
@@ -27,11 +27,11 @@ const { title } = Astro.props;
 					embeddedservice_bootstrap.settings.hideChatButtonOnLoad = true;
 
 					embeddedservice_bootstrap.init(
-						'00DMU0000008hP9',
+						'00D7a0000005DOS',
 						'GemeenteAmsterdamMessagingWeb',
-						'https://omnichanneliv--gat2.sandbox.my.site.com/ESWGemeenteAmsterdamMessa1732548814564',
+						'https://omnichanneliv--dev.sandbox.my.site.com/ESWGemeenteAmsterdamMessa1732548814564',
 						{
-							scrt2URL: 'https://omnichanneliv--gat2.sandbox.my.salesforce-scrt.com'
+							scrt2URL: 'https://omnichanneliv--dev.sandbox.my.salesforce-scrt.com'
 						}
 					);
 				} catch (err) {
