--- a/mijn-amsterdam/src/layouts/Layout.astro
+++ b/mijn-amsterdam/src/layouts/Layout.astro
@@ -29,7 +29,7 @@ const { title } = Astro.props;
 					embeddedservice_bootstrap.init(
 						'00D7a0000005DOS',
 						'GemeenteAmsterdamMessagingWeb',
-						'https://omnichanneliv--dev.sandbox.my.site.com/ESWGemeenteAmsterdamMessa1724245704968',
+						'https://omnichanneliv--dev.sandbox.my.site.com/ESWGemeenteAmsterdamMessage1',
 						{
 							scrt2URL: 'https://omnichanneliv--dev.sandbox.my.salesforce-scrt.com'
 						}
@@ -92,7 +92,8 @@ const { title } = Astro.props;
 				}
 			});
 		</script>
-		<script type='text/javascript' src='https://omnichanneliv--gat2.sandbox.my.site.com/ESWGemeenteAmsterdamMessa1732548814564/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+		<script type='text/javascript' src='https://omnichanneliv--dev.sandbox.my.site.com/ESWGemeenteAmsterdamMessage1/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+
 
 	</body>
 </html>
