--- a/mijn-amsterdam/src/layouts/Layout.astro
+++ b/mijn-amsterdam/src/layouts/Layout.astro
@@ -15,6 +15,17 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.ico" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<style>
+			iframe#embeddedMessagingFrame {
+				border-radius: 0px !important;
+			}
+
+			#embeddedMessagingFrame {
+				height: 544px;
+				width: 400px;
+				border-radius: 0px;
+			}
+		</style>
 	</head>
 	<body>
 		<slot />
