Update chat configuration with new orgId and service URL
Replaced orgId and service URL in both index.astro and Chat.astro to reflect the updated sandbox environment. Ensured consistency across components for proper chat functionality.

--- a/mijn-amsterdam/src/pages/index.astro
+++ b/mijn-amsterdam/src/pages/index.astro
@@ -27,8 +27,8 @@ import Container  from '../components/core/Container.astro';
 			language="nl-NL"
 			service="GemeenteAmsterdamMessagingWeb"
 			title="Chat met ons"
-			orgId="00D7a0000005DOS"
-			url="https://omnichanneliv--dev.sandbox.my.site.com/ESWGemeenteAmsterdamMessage1"
+			orgId="00DMU0000008hP9"
+			url="https://omnichanneliv--gat2.sandbox.my.site.com/ESWGemeenteAmsterdamMessage1"
 		/>
 
 	</main>
