--- a/mijn-amsterdam/src/components/Chat.astro
+++ b/mijn-amsterdam/src/components/Chat.astro
@@ -20,9 +20,9 @@ org id: {orgId}
             embeddedservice_bootstrap.settings.hideChatButtonOnLoad = true;
 
             embeddedservice_bootstrap.init(
-                '{orgId}',
-                '{service}',
-                'https://omnichanneliv--gat2.sandbox.my.site.com/ESWGemeenteAmsterdamMessage1',
+                '00DMU0000008hP9',
+                'GemeenteAmsterdamMessagingWeb',
+                'https://omnichanneliv--gat2.sandbox.my.site.com/ESWGemeenteAmsterdamMessa1732548814564',
                 {
                     scrt2URL: 'https://omnichanneliv--gat2.sandbox.my.salesforce-scrt.com'
                 }
