--- a/mijn-amsterdam/src/pages/index.astro
+++ b/mijn-amsterdam/src/pages/index.astro
@@ -28,7 +28,7 @@ import Container  from '../components/core/Container.astro';
 			service="GemeenteAmsterdamMessagingWeb"
 			title="Chat met ons"
 			orgId="00DMU0000008hP9"
-			url="https://omnichanneliv--gat2.sandbox.my.site.com/ESWGemeenteAmsterdamMessage1"
+			url="https://omnichanneliv--dev.sandbox.my.site.com/ESWGemeenteAmsterdamMessage1"
 		/>
 
 	</main>
