Remove bootstrap.js from assets/js directory.
This file contained unused and excessive constants, functions, and events specific to embedded messaging services. The cleanup reduces file size and improves maintainability by eliminating unnecessary code.

--- a/mijn-amsterdam/src/components/Chat.astro
+++ b/mijn-amsterdam/src/components/Chat.astro
@@ -85,7 +85,7 @@ org id: {orgId}
         }
     });
 </script>
-<script type='text/javascript' src='src/assets/js/bootstrap.js' onload='initEmbeddedMessaging()'></script>
+<script type='text/javascript' src='../assets/js/bootstrap.js' onload='initEmbeddedMessaging()'></script>
 
 
 <style is:global>
