--- a/mijn-amsterdam/src/components/Chat.astro
+++ b/mijn-amsterdam/src/components/Chat.astro
@@ -18,7 +18,7 @@ org id: {orgId}
 
             //Turns of the chat button
             embeddedservice_bootstrap.settings.hideChatButtonOnLoad = true;
-            embeddedservice_bootstrap.settings.devMode = true;
+            // embeddedservice_bootstrap.settings.devMode = true;
 
             embeddedservice_bootstrap.init(
                 '00D7a0000005DOS',
