Set chat language to 'en_US' in embedded messaging.
Updated the embedded messaging settings to use 'en_US' instead of 'nl-NL' as the default language. This ensures consistency and aligns with the expected language format.

--- a/mijn-amsterdam/src/components/Chat.astro
+++ b/mijn-amsterdam/src/components/Chat.astro
@@ -23,7 +23,7 @@ Hallo Chat
 <script type='text/javascript'>
     function initEmbeddedMessaging() {
         try {
-            embeddedservice_bootstrap.settings.language = 'nl-NL'; // For example, enter 'en' or 'en-US'
+            embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
 
             //Turns of the chat button
             embeddedservice_bootstrap.settings.hideChatButtonOnLoad = true;
