--- a/mijn-amsterdam/src/components/Chat.astro
+++ b/mijn-amsterdam/src/components/Chat.astro
@@ -43,7 +43,7 @@ Hallo Chat
     };
 
     function checkIfChatSessionIsCreated() {
-        const orgId = '00DMU0000008hP9';
+        const orgId = '00D7a0000005DOS';
         const storageItemSuffix = '_WEB_STORAGE';
         const storageItem = localStorage.getItem(orgId + storageItemSuffix)
 
@@ -68,31 +68,31 @@ Hallo Chat
             "Chat_Origin": "Website"
         });
 
-        // /**
-        //  * Check if u want to turn on the chat button.
-        //  */
-        // if (checkIfChatSessionIsCreated() || showChatBasedOnTaxonomy()) {
-        //     // Shows the chat button
-        //     setTimeout(() => {
-        //         embeddedservice_bootstrap.utilAPI.showChatButton();
-        //     }, 1000);
-        // }
-        //
-        // if (checkIfChatSessionIsCreated()) {
-        //     // Launches a chat and can be even used when the button is not visible
-        //     embeddedservice_bootstrap.utilAPI
-        //         .launchChat()
-        //         .then(function (success) {
-        //
-        //         })
-        //         .catch(function (error) {
-        //             // Add actions to run after the chat client launch fails.
-        //         })
-        //         .finally(function () {
-        //             // Add actions to run whether the chat client launches
-        //             // successfully or not.
-        //         });
-        // }
+        /**
+         * Check if u want to turn on the chat button.
+         */
+        if (checkIfChatSessionIsCreated() || showChatBasedOnTaxonomy()) {
+            // Shows the chat button
+            setTimeout(() => {
+                embeddedservice_bootstrap.utilAPI.showChatButton();
+            }, 1000);
+        }
+
+        if (checkIfChatSessionIsCreated()) {
+            // Launches a chat and can be even used when the button is not visible
+            embeddedservice_bootstrap.utilAPI
+                .launchChat()
+                .then(function (success) {
+
+                })
+                .catch(function (error) {
+                    // Add actions to run after the chat client launch fails.
+                })
+                .finally(function () {
+                    // Add actions to run whether the chat client launches
+                    // successfully or not.
+                });
+        }
     });
 </script>
 <script is:inline type='text/javascript' src='../assets/js/bootstrap.js' onload='initEmbeddedMessaging()'></script>
