Add logging for Chat component and cleanup unused code
Enhanced logging in the Chat component for better debugging, with console statements to track key variables and load events. Removed unnecessary characters in `bootstrap.js`, and introduced `bootstrap-dev.js` as a new development support file.

--- a/mijn-amsterdam/src/components/Chat.astro
+++ b/mijn-amsterdam/src/components/Chat.astro
@@ -9,6 +9,16 @@ interface Props {
 }
 
 const { orgId,eswConfigDevName, siteURL, scrt2URL,language, title, } = Astro.props;
+
+const data = {
+    title: 'Chat met ons',
+
+}
+console.log('data: '+data)
+console.log('Hello Chat');
+console.log(orgId);
+console.log(siteURL);
+console.log(language);
 ---
 Hallo Chat
 <ul>
@@ -69,6 +79,9 @@ Hallo Chat
 </style>
 
 <script type='text/javascript'>
+
+    console.log('Chat component loaded');
+
     function initEmbeddedMessaging() {
         try {
             embeddedservice_bootstrap.settings.language = 'nl_NL'; // For example, enter 'en' or 'en-US'
