--- a/mijn-amsterdam/src/pages/chat-gat2.astro
+++ b/mijn-amsterdam/src/pages/chat-gat2.astro
@@ -1,10 +1,12 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Container  from '../components/core/Container.astro';
-
+import Chat from '../components/Chatgat2.astro';
 ---
 <Layout title="Mijn Amsterdam | Chatbot GAT2">
     <Container>
+        <h1>Chat Gat2</h1>
 
+        <Chat></Chat>
     </Container>
 </Layout>
