--- a/mijn-amsterdam/src/layouts/Layout.astro
+++ b/mijn-amsterdam/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import "../styles/global.css";
 interface Props {
 	title: string;
 }
@@ -17,6 +18,11 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
+	<div class="mx-auto max-w-7xl sm:px-6 lg:px-8">
+		<!-- Content goes here -->
 		<slot />
+	</div>
+
+
 	</body>
 </html>
